examples/errors/syntax_incomplete_keep.jc
// ================================================
// ERROR: Incomplete Keep Statement
// Expected: [SyntaxError] Incomplete 'keep' statement
// ================================================

// Statement is cut off
keep x =
